Alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ legend {
 
 .formgroup2 {
     margin: 0 auto;
-    max-width: 80%;
+   
 }
 
 label {
@@ -123,7 +123,7 @@ input[type="tel"] {
 }
 
 p {
-   max-width: 70%;
+  
    margin: 0 auto;
    font-size: 1.1em;
 }
